fixed overflow?

--- a/public/stylesheets/scrolling-nav.css
+++ b/public/stylesheets/scrolling-nav.css
@@ -105,8 +105,8 @@ html {
 
 .projects { margin-left: 0px; text-align: left;}
 
-.project-wrapper .project-content { margin-left: 0px; margin-bottom: 30px; }
-.project-wrapper .project-content ul {display:inline;}
+.project-wrapper .project-content { margin-left: 0px; margin-bottom: 10px; }
+.project-wrapper .project-content ul {list-style: none; display: inline-block;}
 .project-wrapper .project-content span { padding: 3px 4px; border: medium solid black; border-radius: 3px; line-height: 2; margin:5px;}
 
 
@@ -166,6 +166,7 @@ of those sections to manage the look and feel of the site. */
     padding-bottom: 100px;
     min-height: 150%;
     text-align: left;
+    overflow: auto;
     background: #fff;
 }
 
@@ -189,7 +190,7 @@ of those sections to manage the look and feel of the site. */
     text-align: left;
     background: #023c40;
     color: #fbfbff;
-    font-size:25px;
+    font-size:15px;
     font-weight:600;
 }
 
